# sat-hs

./: Makefile  README.md  SAT_DP.hs  SatDP.cabal  TODO.md  example.dimacs  sat-dp.cabal  sat-hs.cabal
examples/: 2.dimacs  comment1.dimacs  pure.dimacs  pure_rec.dimacs  unit_sat.dimacs  unit_unsat.dimacs  unsat.dimacs  unsat_ABC.dimacs
src/: CNF.hs  Main.hs  Main_DP.hs  Main_DPLL.hs  VarOrder.hs
test/: comment2.dimacs  comment3.dimacs  invalid3.dimacs  invalid6.dimacs
