cabal-version:      3.0
name:               sat-dp
version:            0.1.0.0
synopsis:           SAT solver using the Davis-Putnam or Directional Resolution algorithm.
license:            MIT
license-file:       LICENSE
-- author:             AUTHOR NAME
-- maintainer:         MAINTAINER EMAIL
build-type:         Simple
extra-doc-files:    README.md, LICENSE
extra-source-files: examples/*.dimacs

common warnings
    ghc-options: -Wall

executable sat-dp
    import:           warnings
    hs-source-dirs:   src
    main-is:          Main.hs
    -- other-modules: Modules included in this executable, other than Main.
    default-language: Haskell2010
    -- other-extensions: LANGUAGE extensions used by modules in this package.
    -- TODO: Add versions to dependencies.
    build-depends:    base,
                      extra >= 1.8.1,
                      optparse-applicative
