cabal-version:      3.0
name:               sat-hs
version:            0.1.0.0
synopsis:           Various SAT solving algorithms.
license:            MIT
license-file:       LICENSE
author:             Robert Coffey
-- maintainer:         MAINTAINER EMAIL
build-type:         Simple
extra-doc-files:    README.md, LICENSE
extra-source-files: examples/*.dimacs

common warnings
    ghc-options: -Wall

-- TODO: Add versions to dependencies.

executable sat-dp
    import:           warnings
    hs-source-dirs:   src
    main-is:          Main_DP.hs
    other-modules:    CNF, DIMACS, Util, VarOrder
    default-language: Haskell2010
    build-depends:    base, optparse-applicative

executable sat-dpll
    import:           warnings
    hs-source-dirs:   src
    main-is:          Main_DPLL.hs
    other-modules:    CNF, DIMACS, Util, VarOrder
    default-language: Haskell2010
    build-depends:    array >= 0.5.8.0, base, optparse-applicative
